Fix alignment of single kudos in last row #12709

--- a/app/assets/stylesheets/kudos/components/_kudos-list.scss
+++ b/app/assets/stylesheets/kudos/components/_kudos-list.scss
@@ -4,7 +4,6 @@
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
 }
 
 .kudos-list__nav {
